--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "kickstart",
+    "name": "crowdfund",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -9,7 +9,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@truffle/hdwallet-provider": "^1.5.1",
+        "@truffle/hdwallet-provider": "^1.7.0",
+        "dotenv": "^16.0.0",
         "fs-extra": "^10.0.0",
         "ganache-cli": "^6.12.2",
         "mocha": "^9.1.2",
